# Okta-Utilities

./: README.md
01-okta-config-backup/: .env.example  .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml
01-okta-config-backup/input/: config.json
01-okta-config-backup/samples/: run-backup.sh  run-dry-run.sh
01-okta-config-backup/tests/: test_config.py  test_pagination.py  test_redaction.py
02-okta-backup-redactor/: .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml
02-okta-backup-redactor/samples/: run-redactor-apply.sh  run-redactor-dry-run.sh  sample-redactor.config.json
02-okta-backup-redactor/tests/: test_config.py  test_redactor.py  test_runner.py
03-okta-org-inventory-exporter/: README.md  SECURITY.md  config.example.json  pyproject.toml  requirements.txt
03-okta-org-inventory-exporter/tests/: test_cli.py  test_exporter.py  test_normalizers.py
04-okta-org-diff/: README.md  SECURITY.md  config.example.json  pyproject.toml  requirements.txt
04-okta-org-diff/input/: diff.config.json
04-okta-org-diff/tests/: test_cli.py  test_diff_engine.py  test_normalizers.py
05-okta-backup-validator/: README.md  SECURITY.md  config.example.json  pyproject.toml
05-okta-backup-validator/samples/: run-validator.sh  sample-validator.config.json
05-okta-backup-validator/tests/: conftest.py  test_config.py  test_reporting.py  test_validator.py
06-okta-terraform-import-generator/: README.md  SECURITY.md  config.example.json  pyproject.toml
06-okta-terraform-import-generator/input/: import-generator.config.json
06-okta-terraform-import-generator/tests/: test_generator.py
07-okta-hcl-generator/: .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml  requirements.txt
07-okta-hcl-generator/tests/: test_cli.py  test_generator.py  test_hcl.py  test_normalizers.py
08-okta-migration-planner/: .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml  requirements.txt
08-okta-migration-planner/tests/: test_cli.py  test_normalizers.py  test_planner.py
09-okta-selective-restore/: .env.example  .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml
09-okta-selective-restore/samples/: run-apply.sh  run-dry-run.sh  sample-restore.config.json
09-okta-selective-restore/tests/: conftest.py  test_config.py  test_planner.py  test_sanitizers.py
10-okta-app-cloner/: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml
10-okta-app-cloner/input/: cloner.config.json
10-okta-app-cloner/samples/: run-dry-run.sh  sample-cloner.config.json
10-okta-app-cloner/tests/: test_config.py  test_planner.py  test_sanitizer.py
11-okta-oidc-app-create/: .env.example  .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml
11-okta-oidc-app-create/samples/: sample.config.json
11-okta-oidc-app-create/tests/: test_config.py  test_payload.py  test_runner.py
12-okta-saml-app-create/: .env.example  .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml
12-okta-saml-app-create/tests/: test_config.py  test_payload.py  test_runner_dry_run.py
13-okta-app-assignment-exporter/: .env.example  .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml
13-okta-app-assignment-exporter/samples/: app-assignment-export.config.json
13-okta-app-assignment-exporter/tests/: test_config.py  test_exporter.py  test_runner_dry_run.py
15-okta-api-auth-server-builder/: .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml
15-okta-api-auth-server-builder/tests/: test_dry_run.py  test_payloads.py
16-okta-scope-claim-exporter/: .env.example  .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml
16-okta-scope-claim-exporter/tests/: test_cli.py  test_config.py  test_exporter.py  test_output.py
17-okta-token-tester/: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt
17-okta-token-tester/samples/: token-test.sample.json
17-okta-token-tester/tests/: test_config.py  test_jwt_utils.py  test_output.py  test_tester.py
18-okta-user-exporter/: .env.example  .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml
18-okta-user-exporter/samples/: user-export.sample.json
18-okta-user-exporter/tests/: test_config.py  test_exporter.py  test_okta_client.py
19-okta-user-bulk-importer/: .env.example  .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml  users.csv
19-okta-user-bulk-importer/samples/: user-import.sample.json  users.sample.csv
19-okta-user-bulk-importer/tests/: test_config.py  test_importer.py  test_okta_client.py
20-okta-user-reconciler/: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml
20-okta-user-reconciler/samples/: user-reconcile.sample.json
20-okta-user-reconciler/tests/: test_reconciler.py
21-okta-dormant-user-finder/: .env.example  .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml
22-okta-user-deactivator/: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml
23-okta-group-create/: .env.example  .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml
24-okta-group-membership-loader/: .env.example  .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml
25-okta-group-rule-exporter/: .env.example  .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml
26-okta-group-rule-create/: .env.example  .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml  requirements-dev.txt
27-okta-group-cleanup-analyzer/: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml
28-okta-mfa-enrollment-reporter/: .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml
29-okta-mfa-reset/: .env.example  .gitignore  README.md  SECURITY.md  config.example.json  pyproject.toml
32-okta-network-zone-manager/: .env.example  .gitignore  README.md  config.example.json  config.json  pyproject.toml
33-okta-idp-exporter/: .env.example  README.md  config.example.json  pyproject.toml
(+751 files in other folders)
