[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okta-backup-redactor"
version = "0.1.0"
description = "Redacts sensitive values from Okta configuration backup folders."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Internal IAM Engineering" }]
dependencies = []

[project.scripts]
okta-backup-redactor = "okta_backup_redactor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
