[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okta-org-inventory-exporter"
version = "0.1.0"
description = "Read-only inventory exporter for Okta configuration backup folders."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Internal IAM Engineering" }]
dependencies = []

[project.scripts]
okta-org-inventory-exporter = "okta_org_inventory_exporter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
