[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okta-migration-planner"
version = "0.1.0"
description = "Read-only migration planning utility for comparing source and target Okta configuration backups."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Internal IAM Engineering" }]
dependencies = []

[project.scripts]
okta-migration-planner = "okta_migration_planner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
