[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okta-oidc-app-create"
version = "0.1.2"
description = "Create Okta OIDC applications from config with dry-run, assignments, rollback output, and reports."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.0"
]

[project.scripts]
okta-oidc-app-create = "okta_oidc_app_create.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
