[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okta-saml-app-create"
version = "0.1.2"
description = "Create Okta SAML applications from JSON configuration with dry-run and evidence output."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.0"
]

[project.scripts]
okta-saml-app-create = "okta_saml_app_create.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
