[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okta-app-assignment-exporter"
version = "0.1.0"
description = "Read-only Okta app assignment exporter with CSV, JSON, and evidence reports."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "python-dotenv>=1.0.1"
]

[project.scripts]
okta-app-assignment-exporter = "okta_app_assignment_exporter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
