[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okta-api-auth-server-builder"
version = "0.1.2"
description = "Config-driven Okta custom API authorization server builder."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.0"
]

[project.scripts]
okta-api-auth-server-builder = "okta_api_auth_server_builder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
