[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okta-token-tester"
version = "0.1.1"
description = "Test Okta OIDC/OAuth token flows, JWT validation, discovery, JWKS, scopes, claims, and introspection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "PyJWT[crypto]>=2.8.0"
]

[project.scripts]
okta-token-tester = "okta_token_tester.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
