[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okta-user-bulk-importer"
version = "0.1.0"
description = "Bulk imports Okta users from CSV with dry-run, duplicate detection, and failure reporting."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.0"
]

[project.scripts]
okta-user-bulk-importer = "okta_user_bulk_importer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
