[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okta-dormant-user-finder"
version = "0.1.1"
description = "Finds stale, never-used, unassigned, or inactive Okta accounts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0"]

[project.scripts]
okta-dormant-user-finder = "okta_dormant_user_finder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
