[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okta-group-create"
version = "0.1.0"
description = "Create Okta groups from CSV, JSON, or YAML input with dry-run, duplicate detection, rollback output, and evidence reporting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1"
]

[project.scripts]
okta-group-create = "okta_group_create.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
