[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okta-group-rule-exporter"
version = "0.1.0"
description = "Read-only exporter for Okta group rules and conditions."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0"
]

[project.scripts]
okta-group-rule-exporter = "okta_group_rule_exporter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
