[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okta-group-cleanup-analyzer"
version = "0.1.3"
description = "API-only Okta group cleanup analyzer for empty, unused, duplicate, stale, and ownerless groups."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Navar Security" }]
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.1"
]

[project.scripts]
okta-group-cleanup-analyzer = "okta_group_cleanup_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
