[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "okta-mfa-reset"
version = "0.1.0"
description = "Reset approved Okta MFA/factor/authenticator enrollments with dry-run and evidence output."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
okta-mfa-reset = "okta_mfa_reset.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
