[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "okta-idp-exporter"
version = "1.0.0"
description = "Export Okta external Identity Provider configuration with secret-safe output."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
okta-idp-exporter = "okta_idp_exporter.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
